; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/jit/llvm/extr_llvmjit_expr.c_ExecRunCompiledExpr.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/jit/llvm/extr_llvmjit_expr.c_ExecRunCompiledExpr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { {}*, %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i32*, i32*)* @ExecRunCompiledExpr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ExecRunCompiledExpr(%struct.TYPE_7__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_8__*, align 8
  %8 = alloca i32 (%struct.TYPE_7__*, i32*, i32*)*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 1
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  store %struct.TYPE_8__* %11, %struct.TYPE_8__** %7, align 8
  %12 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @CheckExprStillValid(%struct.TYPE_7__* %12, i32* %13)
  %15 = call i32 (...) @llvm_enter_fatal_on_oom()
  %16 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i64 @llvm_get_function(i32 %18, i32 %21)
  %23 = inttoptr i64 %22 to i32 (%struct.TYPE_7__*, i32*, i32*)*
  store i32 (%struct.TYPE_7__*, i32*, i32*)* %23, i32 (%struct.TYPE_7__*, i32*, i32*)** %8, align 8
  %24 = call i32 (...) @llvm_leave_fatal_on_oom()
  %25 = load i32 (%struct.TYPE_7__*, i32*, i32*)*, i32 (%struct.TYPE_7__*, i32*, i32*)** %8, align 8
  %26 = call i32 @Assert(i32 (%struct.TYPE_7__*, i32*, i32*)* %25)
  %27 = load i32 (%struct.TYPE_7__*, i32*, i32*)*, i32 (%struct.TYPE_7__*, i32*, i32*)** %8, align 8
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 0
  %30 = bitcast {}** %29 to i32 (%struct.TYPE_7__*, i32*, i32*)**
  store i32 (%struct.TYPE_7__*, i32*, i32*)* %27, i32 (%struct.TYPE_7__*, i32*, i32*)** %30, align 8
  %31 = load i32 (%struct.TYPE_7__*, i32*, i32*)*, i32 (%struct.TYPE_7__*, i32*, i32*)** %8, align 8
  %32 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %33 = load i32*, i32** %5, align 8
  %34 = load i32*, i32** %6, align 8
  %35 = call i32 %31(%struct.TYPE_7__* %32, i32* %33, i32* %34)
  ret i32 %35
}

declare dso_local i32 @CheckExprStillValid(%struct.TYPE_7__*, i32*) #1

declare dso_local i32 @llvm_enter_fatal_on_oom(...) #1

declare dso_local i64 @llvm_get_function(i32, i32) #1

declare dso_local i32 @llvm_leave_fatal_on_oom(...) #1

declare dso_local i32 @Assert(i32 (%struct.TYPE_7__*, i32*, i32*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
